class loader issues not resolved